# hudaifasaleh.com

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.in  requirements.txt
.github/workflows/: django.yml
django_blog/accounts/: admin.py  apps.py  models.py
django_blog/accounts/migrations/: 0001_initial.py
django_blog/accounts/tests/: factories.py  test_models.py
django_blog/core/: apps.py  urls.py  views.py
django_blog/core/tests/: test_views.py
django_blog/home/: apps.py  urls.py
docs/: graph.md
frontend/: tailwind.config.js
project/: .env.example  envs.py  settings.py  testing_settings.py  urls.py
templates/: base.html
templates/account/: signup.html
templates/account/email/: email_confirmation_signup_message.html  email_confirmation_signup_message.txt
templates/core/: index.html  privacy.html  terms.html  unauthenticated.html
