[project]
requires-python = ">=3.12"

[tool.coverage.report]
fail_under = 100
omit = [
    "*/migrations/*",
]
show_missing = true
skip_covered = true

[tool.isort]
profile = "black"
src_paths = ["django_blog"]


[tool.pytest.ini_options]
addopts = "--nomigrations --disable-socket"
DJANGO_SETTINGS_MODULE = "project.testing_settings"
filterwarnings = [
    "error",
    "ignore:.*The default scheme will be changed.*:PendingDeprecationWarning",
]
testpaths = [
    "django_blog",
]

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
